--- a/src/app/user-list/user-list.component.scss
+++ b/src/app/user-list/user-list.component.scss
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 16px;
   padding: 16px;
+  margin: 20px 20px;
 }
 
 .user-card {
@@ -10,6 +11,7 @@
   border: 3px solid #ede1f0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s, box-shadow 0.2s;
+  margin: 16px 0;
 }
 
 .user-card:hover {
@@ -20,6 +22,7 @@
 mat-card-title {
   font-size: 1.1rem;
   font-weight: 600;
+  margin-bottom: 8px;
 }
 
 mat-card-subtitle {
@@ -52,10 +55,11 @@ button[mat-flat-button] {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  margin-bottom: 16px;
 }
 .page-intro {
   margin: 20px 0;
-  padding: 16px;
+  padding: 30px;
   background-color: #f5f5f5;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -69,10 +73,19 @@ button[mat-flat-button] {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  margin: 8px 20px;
 }
-.page-end{
-    margin: 20px 250px;
-    width: 50%;
+.work-sans-users {
+  font-size: x-large;
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  margin: 8px 40px;
+}
+.page-end {
+  margin: 20px 60px;
+  width: 50%;
   padding: 16px;
   background-color: #f5f5f5;
   border: 1px solid #ddd;
@@ -80,4 +93,7 @@ button[mat-flat-button] {
   font-size: 1rem;
   color: #333;
   text-align: center;
+}
+.new-button{
+      margin: 0px 40px;
 }
