--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,4 +1,5 @@
-<mat-card class="form-card">
+<div class="edit">
+  <mat-card class="form-card">
   <mat-card-title>
     {{ isEditMode ? 'Edit User' : 'Create User' }}
   </mat-card-title>
@@ -20,3 +21,4 @@
     </form>
   </mat-card-content>
 </mat-card>
+</div>
