--- a/src/app/user-form/user-form.component.scss
+++ b/src/app/user-form/user-form.component.scss
@@ -2,7 +2,7 @@
     max-width: 400px;
     margin: 20px auto;
     padding: 16px;
-    background-color: #eae7e7; 
+    background-color: #9999a0; 
     border: 1px solid #e0e0e0; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px; 
@@ -30,5 +30,7 @@
     justify-content: center;
     margin-top: 16px;
   }
-  
+  .edit{
+    padding: 60px;
+  }
 
